# conan_assimp_test

./: CMakeGraphVizOptions.cmake  CMakeLists.txt  README.md  conanfile.py
.conan/profiles/: build_profile  linux-armv7hf-gcc7
oiio-only/: CMakeLists.txt  conanfile.py
oiio-only/src/: main.cpp
src/: CMakeLists.txt  colorspace.cpp  colorspace.hpp  conan_assimp_test.cpp  conan_assimp_test.h  main.cpp
src/alicevision/: CMakeLists.txt
src/alicevision/dataio/: E57Reader.hpp
src/alicevision/system/: CMakeLists.txt
src/cmake/: Helpers.cmake
src/software/: CMakeLists.txt
src/software/pipeline/: CMakeLists.txt
test_package/: conanfile.py
